# Dachshund-Engine

./: .gitignore  CMakeLists.txt  Readme.md  vcpkg.json  workspace.code-workspace
include/core/network/: NetworkClient.h
include/core/sensor/: SensorManager.h
rpi/: README.md
rpi/src/: sensor_server.py
src/: calculator.cpp  dashboard.cpp  main.cpp
src/core/network/: NetworkClient.cpp
src/core/sensor/: SensorManager.cpp
tests/: calculator.h  main.cpp
